# fastapi-docker-fork

./: .dockerignore  .gitignore  JenkinsFile  README.md  docker-compose.yaml  dockerfile  setup.cfg  setup.py  setup.sh
.github/workflows/: docker_push.yml  terraform.yml
scripts/: setup.sh
src/: _version.py
src/fast_api_sample/: main.py
src/fastapi_sample/: main.py
terraform/: README.md  backend.tf  backend_env.conf  datasource.tf  ecs_services.tf  ecs_task_defintions.tf  env.tfvars  iam.tf  outputs.tf  providers.tf  variables.tf
tests/: get_test.py
