[metadata]
author=Prashanna R
description=Fastapi deployment with docker container
name=fastapi-docker
version=attr: _version.__version__

[options]
packages=find:
package_dir=
    =src
zip_safe=False
install_requires=
    fastapi==0.79.0
    uvicorn==0.18.2
[options.packages.find]
where=src
exclude=build
[options.extras_require]
build=
    pylint-quotes==0.2.3
    pytest==7.1.2
    pytest-cov==3.0.0
    requests==2.28.1